--- a/css/style.css
+++ b/css/style.css
@@ -37,3 +37,11 @@ header h2 {
 .navbar {
   background-color: #901cad;
 }
+
+/* tabs */
+
+.tab-content {
+  border: 1px solid #000;
+  border-top: none;
+  padding: 10px;
+}
