--- a/css/style.css
+++ b/css/style.css
@@ -40,8 +40,8 @@ header h2 {
 
 /* tabs */
 
-.tab-content {
-  border: 1px solid #000;
-  border-top: none;
-  padding: 10px;
+a,
+a:hover {
+  color: inherit;
+  text-decoration: none;
 }
