--- a/css/style.css
+++ b/css/style.css
@@ -45,3 +45,13 @@ a:hover {
   color: inherit;
   text-decoration: none;
 }
+
+/* Carousel */
+
+.carousel {
+  border: solid #5637dd;
+}
+
+.carousel-caption {
+  background-color: rgba(0, 0, 0, 0.5);
+}
