--- a/css/style.css
+++ b/css/style.css
@@ -55,3 +55,10 @@ a:hover {
 .carousel-caption {
   background-color: rgba(0, 0, 0, 0.5);
 }
+
+#carouselButton {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  z-index: 100;
+}
