--- a/css/style.old.css
+++ b/css/style.old.css
@@ -1,50 +1,64 @@
 body {
-  font-family: "Open Sans", sans-serif; }
+  font-family: "Noto Sans JP", sans-serif;
+}
 
 h1,
 h2,
 h3 {
-  font-family: "Lobster", cursive; }
+  font-family: "Lobster", cursive;
+}
 
 h2 {
-  color: #3046c5; }
+  color: #3046c5;
+}
 
 header h2 {
-  color: #cec8ff; }
+  color: #cec8ff;
+}
 
 .site-footer {
-  background-image: linear-gradient(#cec8ff, white);
-  padding: 20px 0; }
+  background-image: linear-gradient(#cec8ff, #fff);
+  padding: 20px 0;
+}
 
 .jumbotron {
   margin: 0;
   padding: 30px;
   background-image: linear-gradient(to right, #5637dd, #3046c5, #60106b);
-  color: white; }
+  color: #fff;
+}
 
 .row-content {
   padding: 50px 0;
   border-bottom: 1px ridge;
-  min-height: 200px; }
+  min-height: 200px;
+}
 
 .navbar {
-  background-color: #901cad; }
+  background-color: #901cad;
+}
 
 /* tabs */
+
 a,
 a:hover {
   color: inherit;
-  text-decoration: none; }
+  text-decoration: none;
+}
 
 /* Carousel */
+
 .carousel {
-  border: solid #5637dd; }
+  border: solid #5637dd;
+}
 
 .carousel-caption {
-  background-color: rgba(0, 0, 0, 0.5); }
+  background-color: rgba(0, 0, 0, 0.5);
+}
 
 #carouselButton {
   position: absolute;
   right: 0;
   bottom: 0;
-  z-index: 100; }
+  z-index: 100;
+}
