--- a/css/style.css
+++ b/css/style.css
@@ -48,3 +48,11 @@ a:hover {
   right: 0;
   bottom: 0;
   z-index: 100; }
+
+#reserveModal .modal-header {
+  background: #17a2b8;
+  color: #fff; }
+
+#loginModal .modal-header {
+  background: #901cad;
+  color: #fff; }
